--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <script>
     $('#search-btn').on('click', function() {
       var returnVal = "";
-      $('div#display-text').html('&lt;loading... (4 secs)&gt;');
+      $('div#display-text').html('&lt;loading... (max 4 secs)&gt;');
 
       // input
       var toSearch = $('#search1').val().trim();
