--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <meta charset="UTF-8">
 <html lang="en">
 
+<!-- 
+todo:
+* txt options
+* better display-text (table)
+-->
+
 <head>
   <!-- Bootstrap -->
   <link href="bootstrap3/css/bootstrap.css" rel="stylesheet">
