--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ todo:
       var logic = $('#logic').val().trim();
       var toSearch2 = $('#search2').val().trim();
 
-      // console.log(toSearch1 + " " + logic + " " + toSearch2);
+      console.log("`" + toSearch + "` `" + logic + "` `" + toSearch2 + "`");
 
       // search
       hash = new Object();
