--- a/index.html
+++ b/index.html
@@ -29,31 +29,7 @@ todo:
   <link href="https://fonts.googleapis.com/css?family=Lato:100,400" rel="stylesheet">
 
   <!-- Custom Style -->
-  <style>
-    body {
-      font-family: 'Lato', sans-serif;
-      /*background-color: #222;*/
-      /*color: #ddd;*/
-    }
-  
-    .row {
-      padding-top: 50px;
-      width: 800px;
-      position: relative;
-      left: 100px;
-      margin: auto;
-      text-align: center;
-    }
-
-    select {
-      max-width: 100px;
-      margin: auto;
-    }
-
-    #display-text {
-      line-height: 250%;
-    }
- </style>
+  <link href="assets/custom.css" rel="stylesheet">
 </head>
 <body>
   <div class='row'>
@@ -79,130 +55,12 @@ todo:
   <button id='search-btn' class='btn btn-primary pull-right' style='margin-right: 200px; margin-top: 20px'>Search</button>
   </div>
 
-
   <hr>
+
   <div class='container'>
     <div id='display-text'></div>
   </div>
   <!-- Custom Script -->
-  <script>
-    $('#search-btn').on('click', function() {
-      var returnVal = "";
-      $('div#display-text').html('&lt;loading... (max 4 secs)&gt;');
-
-      // input
-      // var toSearchRaw = $('#search1').val().trim().toLowerCase();
-      // var logicRaw = $('#logic').val().trim().toLowerCase();
-      // var toSearch2Raw = $('#search2').val().trim().toLowerCase();
-
-      // sanitise ... >_>
-      // var toSearch = toSearchRaw.replace(/[^a-zA-Z0-9.¡£¡¢,:£®\n\s]/, '');
-      // var logic = logicRaw.replace(/[^a-zA-Z0-9.¡£¡¢,:£®\n\s]/, '');
-      // var toSearch2 = toSearch2Raw.replace(/[^a-zA-Z0-9.¡£¡¢,:£®\n\s]/, '');
-
-      var toSearch = $('#search1').val().trim().toLowerCase();
-      var logic = $('#logic').val().trim().toLowerCase();
-      var toSearch2 = $('#search2').val().trim().toLowerCase();
-
-      // console.log("`" + toSearch + "` `" + logic + "` `" + toSearch2 + "`");
-
-      // search
-      hash = new Object();
-      var fileName = 'hb5.txt';
-      try {
-          $.get(fileName, function(data) {
-              // Break result into line by line
-              var lines = data.split("\n");
-              for (var i=0; i<lines.length; i++) {
-                  var line = lines[i];
-                  var lineLower = line.toLowerCase();
-                  var split = line.split("|");
-
-                  // [start logic]
-                  if (logic == "xor") {
-                    // 0. XOR
-                    if (lineLower.match(new RegExp(".*" + toSearch + ".*" + toSearch2 + ".*"))) {
-                      continue;
-                    } else if (lineLower.match(new RegExp(".*" + toSearch2 + ".*" + toSearch + ".*"))) {
-                      continue;
-                    } else if (lineLower.match(new RegExp(".*" + toSearch + ".*"))) {
-                      if (split.length == 1) {
-                        returnVal += line + "<br/>";
-                      } else {
-                        name = split[0];
-                        value = split[1];
-                        returnVal += name + " " + value + "<br/>";
-                      }
-                    }
-                  } else if (logic == "or") {
-                    // 1. OR
-                    if (lineLower.match(new RegExp(".*" + toSearch + ".*" + toSearch2 + ".*"))) {
-                      if (split.length == 1) {
-                        returnVal += line + "<br/>";
-                      } else {
-                        name = split[0];
-                        value = split[1];
-                        returnVal += name + " " + value + "<br/>";
-                      }
-                    } else if (lineLower.match(new RegExp(".*" + toSearch2 + ".*" + toSearch + ".*"))) {
-                      if (split.length == 1) {
-                        returnVal += line + "<br/>";
-                      } else {
-                        name = split[0];
-                        value = split[1];
-                        returnVal += name + " " + value + "<br/>";
-                      }
-                    } else if (lineLower.match(new RegExp(".*" + toSearch + ".*"))) {
-                      if (split.length == 1) {
-                        returnVal += line + "<br/>";
-                      } else {
-                        name = split[0];
-                        value = split[1];
-                        returnVal += name + " " + value + "<br/>";
-                      }
-                    } else if (lineLower.match(new RegExp(".*" + toSearch2 + ".*"))) {
-                      if (split.length == 1) {
-                        returnVal += line + "<br/>";
-                      } else {
-                        name = split[0];
-                        value = split[1];
-                        returnVal += name + " " + value + "<br/>";
-                      }
-                    } 
-                  } else if (logic == "and") {
-                    // 2. AND
-                      }
-                    if (lineLower.match(new RegExp(".*" + toSearch + ".*" + toSearch2 + ".*"))) {
-                      if (split.length == 1) {
-                        returnVal += line + "<br/>";
-                      } else {
-                        name = split[0];
-                        value = split[1];
-                        returnVal += name + " " + value + "<br/>";
-                      }
-                    } else if (lineLower.match(new RegExp(".*" + toSearch2 + ".*" + toSearch + ".*"))) {
-                      if (split.length == 1) {
-                        returnVal += line + "<br/>";
-                      } else {
-                        name = split[0];
-                        value = split[1];
-                        returnVal += name + " " + value + "<br/>";
-                      }
-                    }
-                    // [end logic]
-              }
-          }, 'text');
-      } catch (e) {
-          console.warn(e);
-      }
-
-      setTimeout(function() {
-        $('#display-text').html(returnVal);
-        if (returnVal == '') {
-          $('#display-text').html("Couldn't be found: \"" + toSearch + "\" " + logic.toUpperCase() + " \"" + toSearch2 + "\".");
-        }
-      }, 4000);
-    });
-  </script>
+  <script src="assets/custom.js"></script>
 </body>
 </html>
