--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@ todo:
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato:100,400" rel="stylesheet">
 
+  <!-- Theme -->
+  <link href="assets/theme.css" rel="stylesheet">
+
   <!-- Custom Style -->
   <link href="assets/custom.css" rel="stylesheet">
 </head>
@@ -45,11 +48,11 @@ todo:
     <option id='1' value="hb5">Big5 版本</option>
   </select>
   <div class='row'>
-    <div class='col-md-4'>
+    <div class='col-md-5'>
       <p>Search 1</p>
       <textarea id='search1'></textarea>
     </div>
-    <div class='col-md-4'>
+    <div class='col-md-2'>
       <p>Logic [and|or|xor]</p>
       <select class='form-control' id='logic'>
         <option value='or'>or</option>
@@ -57,14 +60,14 @@ todo:
         <option value='xor'>xor</option>    
       </select>
     </div>
-    <div class='col-md-4'>
+    <div class='col-md-5'>
       <p>Search 2</p>
       <textarea id='search2'></textarea>
     </div>
   </div>
 
   <div class='container'>
-  <button id='search-btn' class='btn btn-primary pull-right' style='margin-right: 200px; margin-top: 20px'>Search</button>
+  <button id='search-btn' class='btn buttons blue pull-right'>Search</button>
   </div>
 
   <hr>
