--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <html lang="en">
-
-<!-- 
+  <!-- 
 todo:
 * txt options
 * better display-text
@@ -13,69 +12,103 @@ todo:
 * unit testing
 -->
 
-<head>
-  <!-- Bootstrap -->
-  <link href="bootstrap3/css/bootstrap.css" rel="stylesheet">
-  
-  <!-- jQuery -->
-  <script src="bootstrap3/jquery/jquery-1.10.2.js" type="text/javascript"></script>
-  <script type="text/javascript" src="bootstrap3/jquery/jquery-ui.custom.min.js"></script>
+  <head>
+    <!-- Bootstrap -->
+    <link
+      href="bootstrap3/css/bootstrap.css"
+      rel="stylesheet"
+    />
 
-  <!-- JS -->
-  <script src="bootstrap3/js/bootstrap.js" type="text/javascript"></script>
+    <!-- jQuery -->
+    <script
+      src="bootstrap3/jquery/jquery-1.10.2.js"
+      type="text/javascript"
+    ></script>
+    <script
+      type="text/javascript"
+      src="bootstrap3/jquery/jquery-ui.custom.min.js"
+    ></script>
 
-  <!-- Titles -->
-  <!-- Icon from: https://www.flaticon.com/premium-icon/reading_3635537 -->
-  <link rel="icon" href="./assets/img/favicon.png">
-  <title>Boogle search</title>
+    <!-- JS -->
+    <script
+      src="bootstrap3/js/bootstrap.js"
+      type="text/javascript"
+    ></script>
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,400" rel="stylesheet">
+    <!-- Titles -->
+    <!-- Icon from: https://www.flaticon.com/premium-icon/reading_3635537 -->
+    <link
+      rel="icon"
+      href="./assets/img/favicon.png"
+    />
+    <title>Boogle search</title>
 
-  <!-- Theme -->
-  <link href="assets/theme.css" rel="stylesheet">
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,400"
+      rel="stylesheet"
+    />
 
-  <!-- Custom Style -->
-  <link href="assets/custom.css" rel="stylesheet">
-</head>
-<body>
-  <div class='header-logo'>
-    <img src="./assets/img/favicon.png" />
-    <span class='title'>boogle</span>
-  </div>
-  <select id='files' class='form-control'>
-    <option id='0' value="cuv-ibs">和合本</option>
-    <option id='1' value="hb5">Big5 版本</option>
-  </select>
-  <div class='row'>
-    <div class='col-md-5'>
-      <p>Search 1</p>
-      <textarea id='search1'></textarea>
+    <!-- Theme -->
+    <link
+      href="assets/theme.css"
+      rel="stylesheet"
+    />
+
+    <!-- Custom Style -->
+    <link
+      href="assets/custom.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="header-logo">
+      <img src="./assets/img/favicon.png" />
+      <span class="title">boogle</span>
     </div>
-    <div class='col-md-2'>
-      <p>Logic [and|or|xor]</p>
-      <select class='form-control' id='logic'>
-        <option value='and'>and</option>
-        <option value='or'>or</option>
-        <option value='xor'>xor</option>    
-      </select>
+    <select id="files" class="form-control">
+      <option id="0" value="cuv-ibs">
+        和合本
+      </option>
+      <option id="1" value="hb5">
+        Big5 版本
+      </option>
+    </select>
+    <div class="row">
+      <div class="col-md-5">
+        <p>Search 1</p>
+        <textarea id="search1"></textarea>
+      </div>
+      <div class="col-md-2">
+        <p>Logic [and|or|xor|not]</p>
+        <select class="form-control" id="logic">
+          <option value="and">and</option>
+          <option value="or">or</option>
+          <option value="xor">xor</option>
+          <option value="not">not</option>
+        </select>
+      </div>
+      <div class="col-md-5">
+        <p>Search 2</p>
+        <textarea id="search2"></textarea>
+      </div>
     </div>
-    <div class='col-md-5'>
-      <p>Search 2</p>
-      <textarea id='search2'></textarea>
+
+    <div class="container">
+      <button
+        id="search-btn"
+        class="btn buttons blue pull-right"
+      >
+        Search
+      </button>
     </div>
-  </div>
 
-  <div class='container'>
-  <button id='search-btn' class='btn buttons blue pull-right'>Search</button>
-  </div>
+    <hr />
 
-  <hr>
-
-  <div class='container'>
-    <div id='display-text'></div>
-  </div>
-  <!-- Custom Script -->
-  <script src="assets/custom.js"></script>
-</body>
+    <div class="container">
+      <div id="display-text"></div>
+    </div>
+    <!-- Custom Script -->
+    <script src="assets/custom.js"></script>
+  </body>
 </html>
